# demo_ollama

./: demo.ipynb  demo.py  main.py  pyproject.toml
